make routes restful style

--- a/ui/html/base.tmpl
+++ b/ui/html/base.tmpl
@@ -19,6 +19,7 @@
       <aside>My default sidebar</aside>
       {{ end }}
     </main>
+    <footer>@Copyright {{.CurrentYear}}</footer>
   </body>
 </html>
 {{ end }}
