--- a/ui/html/base.tmpl
+++ b/ui/html/base.tmpl
@@ -5,8 +5,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{{template "title" .}}</title>
-    <link rel="stylesheet" href="static/style.css">
-    <script type="module" src="static/main.js" defer></script>
+    <link rel="stylesheet" href="/static/style.css">
+    <script type="module" src="/static/main.js" defer></script>
+    <link rel="shortcut icon" href="#" type="image/x-icon">
   </head>
   <body>
     <header>
