--- a/ui/html/partials/nav.tmpl
+++ b/ui/html/partials/nav.tmpl
@@ -1,6 +1,6 @@
 {{define "nav"}}
 <nav>
   <a href="/">Home</a>
-  <a href="/snippet/new">New</a>
+  <a href="/snippets/new">New</a>
 </nav>
 {{ end }}
