--- a/ui/html/pages/view.tmpl
+++ b/ui/html/pages/view.tmpl
@@ -1,8 +1,11 @@
 {{define "title"}}Snippet {{.Snippet.Id}}{{ end }}
 
 {{define "main"}}
+{{if .Flash}}
+<p class="success">{{.Flash}}</p>
+{{ end }}
 <h1>Snippet no {{.Snippet.Id}} - {{.Snippet.Title}}</h1>
 <p>{{.Snippet.Content}}</p>
 <p>{{.Snippet.Created | humanDate | printf "Created %s"}}</p>
-<p>Expires: {{humanDate .Snippet.Expires}}</p>
+<p>Expires: {{ humanDate .Snippet.Expires }}</p>
 {{ end }}
